feat: consolidate chat session storage into a single SQLite database
Replace the custom shard/projection/index.state consistency protocol with one SPEC-CSS-* SQLite transaction boundary and WAL recovery, while preserving public APIs and legacy data through archived migration.

Use an active FTS5 trigram index for metadata substring search and retain LIKE fallback for short or unavailable-FTS queries.

Co-Authored-By: Codex <codex@openai.com>